<resources>
    <string name="app_name">SelenKhoury</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>
    <string name="Home">Home</string>
    <string name="home">Home</string>
    <string name="LogOut">logout</string>
    <string name="About">about</string>
    <string name="Help">help</string>
    <string name="Settings">settings</string>
    <string name="login">LogIn</string>
    <string name="welcome_to_my_application">Welcome to my application</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="register">Register</string>
    <string name="help_page">Help Page</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
</resources>