<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
//setting items - הגדרת איטמז/ פריטים
    <item android:title="@string/Settings"
        android:id="@+id/settings_menu"/>

    <item android:title="@string/Help"
        android:id="@+id/help_menu"/>

    <item android:title="@string/About"
        android:id="@+id/about_menu"/>

    <item android:title="@string/Home"
        android:id="@+id/home_menu"/>

    <item android:title="@string/LogOut"
        android:id="@+id/logout_menu"/>
    <item android:title="List"
        android:id="@+id/list_menu"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/Person"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Person"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>